feat: JSpecify als Standard-Nullable-Strategie, 6 YAML-Presets, LICENSE
- SpringdocOpenApi31Recipe: neue Option useJSpecifyNullable (Default: true)
  → SchemaToJSpecifyNullableRecipe für Felder ohne explizites type=,
    @Schema(types={"T","null"}) für Felder mit explizitem type=
  → useJSpecifyNullable: false wählt weiterhin NullableSchemaRecipe (types-array)
- SchemaToJSpecifyNullableRecipe: als Building Block ins Composit integriert
- springdoc-openapi-31.yml: 6 Presets statt 3
  → JSpecify-Gruppe: SpringdocOpenApi31Recipe, MinimalRecipe, AnnotationsOnlyRecipe
  → TypesArray-Gruppe: TypesArrayRecipe, TypesArrayMinimalRecipe, TypesArrayAnnotationsOnlyRecipe
- migrateExamples: true als Default (example ist in OA 3.1 deprecated)
- README: Limitations-Abschnitt erklärt warum JSpecify der Default ist,
  Preset-Tabellen in JSpecify- und TypesArray-Gruppe aufgeteilt,
  useJSpecifyNullable-Parameter dokumentiert
- LICENSE: Apache 2.0 hinzugefügt
- Moderne Platform Kompatibilität: getTags(), getEstimatedEffortPerOccurrence(),
  @Option mit example-Feldern in allen Recipes